feat(config): centralizar carga de variables y runtime config (frontend/backend)
Frontend:
- Añade src/lib/env.ts (getApiBase) que prioriza runtime -> build -> fallback.
- Usa getApiBase() en src/lib/api.ts y componentes (BusquedaSoftware, BusquedaCarrera).
- Carga /config.json opcional en src/main.tsx.
- Añade public/config.json.example, actualiza .env.development, vite-env.d.ts y ENVIRONMENT.md.

Backend:
- Centraliza carga de .env solo en desarrollo vía config.LoadConfig (no usar .env en producción).
- main.go usa la config centralizada para construir la dirección del server.

Permite cambiar la URL de la API en dev, en CI (build-time) o en runtime sin exponer secretos.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 *.exe
+
+# Environment files (do not commit secrets)
+.env
+api/.env
+
+# Frontend build artifacts
+frontend/node_modules/
+frontend/dist/
+
+# Go build artifacts
+api/quepc
