feat: creat autenticacion

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,15 +1,25 @@
-# Example environment variables for local development
-# Copy this file to `.env` and adjust values as needed.
-
-# API
-APP_ENV=development
-APP_HOST=127.0.0.1
-APP_PORT=8080
-
-# PostgreSQL
-DB_HOST=127.0.0.1
+# Postgres
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=appdb
+DB_PASSWORD=12345678
+DB_NAME=proyecto-desarrollo
 DB_SSLMODE=disable
+
+# puerto
+APP_PORT=8080
+
+# (development/production)
+APP_ENV=development
+
+# Generar documentacion
+GENERATE_DOCS=0
+
+#JWT
+JWT_SECRET=asd23wfsfsdfsdfsdfsdfsdf
+JWT_TTL_MIN=30
+
+# Datos ADMIN
+ADMIN_EMAIL=admin@quepc.com
+ADMIN_PASSWORD=12345678
+ADMIN_NAME=Administrador General
