infra y feature: se agrega configuraciones para docker compose desarrollo y auth en front.

--- a/.env.production.secrets.example
+++ b/.env.production.secrets.example
@@ -6,3 +6,6 @@ DB_PASSWORD_FILE=/run/secrets/db_password
 
 # O, si no usás secrets (no recomendado), definir explícitamente una contraseña fuerte
 # DB_PASSWORD=contraseña_super_fuerte_producción
+
+#JWT
+JWT_SECRET=prod_secret_change_me
