--- a/.env.production.example
+++ b/.env.production.example
@@ -29,3 +29,7 @@ VITE_API_BASE_URL=/v1
 # Puerto expuesto en el host para la entrada web de Traefik
 TRAEFIK_PORT=8080
 
+# --- JWT  ---
+JWT_TTL_MIN=30
+# El secreto va en .env.production.secrets.example
+
