--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,19 @@ services:
       - --providers.docker=true
       - --providers.docker.endpoint=unix:///var/run/docker.sock
       - --providers.docker.exposedbydefault=false
-      - --entrypoints.web.address=:8080
+      - --entrypoints.web.address=:80
+      - --entrypoints.dashboard.address=:8080
+      - --api.dashboard=true
       - --accesslog=true
       - --log.level=INFO
     ports:
+      - "80:80"
       - "${TRAEFIK_PORT:-8080}:8080"
     volumes:
       - ${XDG_RUNTIME_DIR}/docker.sock:/var/run/docker.sock:ro
     networks:
       - proxy
-    restart: unless-stopped
+    restart: always
 
   db:
     image: postgres:18.0-alpine3.22
@@ -32,6 +35,7 @@ services:
       retries: 10
     networks:
       - proxy
+    restart: always
 
   api:
     build:
@@ -48,13 +52,18 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=proxy
-      - traefik.http.routers.api.rule=PathPrefix(`/v1`)
+      - traefik.http.routers.api.rule=Host(`api.quepc.home`)
       - traefik.http.routers.api.entrypoints=web
-      - traefik.http.routers.api.priority=2
       - traefik.http.services.api.loadbalancer.server.port=8080
+      # También enrutar peticiones con PathPrefix /v1 y host principal al servicio api
+      - traefik.http.routers.api-v1.rule=Host(`quepc.home`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api-v1.entrypoints=web
+      - traefik.http.routers.api-v1.service=api
+      - traefik.http.routers.api-v1.priority=10000
+
     networks:
       - proxy
-    restart: unless-stopped
+    restart: always
 
   web:
     build:
@@ -65,7 +74,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=proxy
-      - traefik.http.routers.web.rule=PathPrefix(`/`) && !PathPrefix(`/v1`)
+      - traefik.http.routers.web.rule=Host(`quepc.home`)
       - traefik.http.routers.web.entrypoints=web
       - traefik.http.routers.web.priority=1
       - traefik.http.services.web.loadbalancer.server.port=80
@@ -73,7 +82,7 @@ services:
       - api
     networks:
       - proxy
-    restart: unless-stopped
+    restart: always
 
 volumes:
   db_data:
