feat: imagenes y front de busqueda juego mas otras cosas

--- a/.env.development.example
+++ b/.env.development.example
@@ -30,6 +30,14 @@ POSTGRES_DB=db_nahue
 # OJO: Se sobreescribe por .env.development.secrets
 POSTGRES_PASSWORD_FILE=/run/secrets/db_password
 
+# --- Assets estáticos ---
+# Host base público para armar URLs de /static (opcional)
+# Si se omite, se usa el host de la request.
+API_ASSETS_BASE_URL=http://localhost:8080
+
+# --- JWT ---
+JWT_SECRET=dev_secret_change_me
+JWT_TTL_MIN=30
 
 # --- Frontend (Vite) ---
 # En desarrollo, el frontend apunta al API expuesto localmente
