--- a/.env.development.secrets.example
+++ b/.env.development.secrets.example
@@ -13,6 +13,9 @@ DB_PASSWORD_FILE=/run/secrets/db_password
 #JWT
 JWT_SECRET=dev_secret_change_me
 
+# TTL del token en minutos
+JWT_TTL_MIN=30
+
 # Datos ADMIN
 ADMIN_EMAIL=admin@quepc.com
 ADMIN_PASSWORD=12345678
