--- a/.env.production.example
+++ b/.env.production.example
@@ -25,6 +25,10 @@ POSTGRES_PASSWORD_FILE=/run/secrets/db_password
 # --- ARG para build del Frontend ---
 VITE_API_BASE_URL=/v1
 
+# --- Assets estáticos ---
+# Base pública para construir URLs de /static
+API_ASSETS_BASE_URL=http://quepc.home
+
 # --- Traefik ---
 # Puerto expuesto en el host para la entrada web de Traefik
 TRAEFIK_PORT=8080
