--- a/frontend/.env.production.example
+++ b/frontend/.env.production.example
@@ -3,3 +3,7 @@
 # Provide these via CI/CD environment instead of a .env file if you want to avoid
 # using .env in production.
 VITE_API_BASE_URL=https://api.example.com/v1
+
+# Opcional: si servís frontend y API bajo el mismo host con Traefik,
+# podés usar la ruta relativa base del API
+# VITE_API_BASE_URL=/v1
