--- a/.env.production.secrets.example
+++ b/.env.production.secrets.example
@@ -9,3 +9,14 @@ DB_PASSWORD_FILE=/run/secrets/db_password
 
 #JWT
 JWT_SECRET=prod_secret_change_me
+
+# TTL del token en minutos
+JWT_TTL_MIN=30
+
+# Credenciales administrador inicial (opcional aquí; preferir secret separado)
+ADMIN_EMAIL=admin@quepc.com
+ADMIN_PASSWORD=change_me_super_secure
+ADMIN_NAME=Administrador Produccion
+
+# Base pública para assets (si se requiere override)
+#API_ASSETS_BASE_URL=http://quepc.home
